--- a/workspace/join.html
+++ b/workspace/join.html
@@ -659,7 +659,7 @@
         <span>개인정보 수집 및 이용에 동의하십니까?</span> <input type="checkbox" class="checkbox" id="terms-perInfo-checkbox"> 동의함
       </div>
       <div class="terms-mss">
-        <span>[필수] 개인정보 수집 및 이용 동의</span>
+        <span>[선택] 쇼핑정보 수신 동의</span>
         <div id="terms-mss">
           <p>
             할인쿠폰 및 혜택, 이벤트, 신상품 소식 등 쇼핑몰에서 제공하는 유익한 쇼핑정보를 SMS나 이메일로 받아보실 수 있습니다.<br>
@@ -726,42 +726,42 @@
       const termsPerInfoCheckbox=document.getElementById("terms-perInfo-checkbox");
 
       //회원가입 input 조건
-      // if(ID.value.trim() === ""){
-      //   alert("아이디를 입력하세요");
-      //   return;
-      // }
-      // if(PW.value.trim() === ""){
-      //   alert("비밀번호를 입력하세요");
-      //   return;
-      // }
-      // if(PW.value!==PWCh.value){
-      //   alert("비밀번호가 다릅니다.");
-      //   return;
-      // }
-      // if(PWCh.value.trim() === ""){
-      //   alert("비밀번호확인을 입력하세요");
-      //   return;
-      // }
-      // if(name.value.trim() === ""){
-      //   alert("이름을 입력하세요");
-      //   return;
-      // }
-      // if(email.value.trim() === ""){
-      //   alert("이메일을 입력하세요");
-      //   return;
-      // }else if(!email.value.trim().includes("@")){
-      //   alert("이메일에 @가 포함되어 있지 않습니다.\n이메일 형식에 맞게 입력해주세요.")
-      //   return;
-      // }else if(!email.value.trim().includes(".")){
-      //   alert("이메일에 .이 포함되어 있지 않습니다.\n이메일 형식에 맞게 입력해주세요.")
-      //   return;
-      // }else if(email.value.trim().split("@")[0].length<1){
-      //   alert("이메일 형식에 맞게 입력해주세요.")
-      //   return;
-      // }else if(email.value.trim().split("@")[1].split(".")[0].length<1){
-      //   alert("이메일 형식에 맞게 입력해주세요.")
-      //   return;
-      // }
+      if(ID.value.trim() === ""){
+        alert("아이디를 입력하세요");
+        return;
+      }
+      if(PW.value.trim() === ""){
+        alert("비밀번호를 입력하세요");
+        return;
+      }
+      if(PW.value!==PWCh.value){
+        alert("비밀번호가 다릅니다.");
+        return;
+      }
+      if(PWCh.value.trim() === ""){
+        alert("비밀번호확인을 입력하세요");
+        return;
+      }
+      if(name.value.trim() === ""){
+        alert("이름을 입력하세요");
+        return;
+      }
+      if(email.value.trim() === ""){
+        alert("이메일을 입력하세요");
+        return;
+      }else if(!email.value.trim().includes("@")){
+        alert("이메일에 @가 포함되어 있지 않습니다.\n이메일 형식에 맞게 입력해주세요.")
+        return;
+      }else if(!email.value.trim().includes(".")){
+        alert("이메일에 .이 포함되어 있지 않습니다.\n이메일 형식에 맞게 입력해주세요.")
+        return;
+      }else if(email.value.trim().split("@")[0].length<1){
+        alert("이메일 형식에 맞게 입력해주세요.")
+        return;
+      }else if(email.value.trim().split("@")[1].split(".")[0].length<1){
+        alert("이메일 형식에 맞게 입력해주세요.")
+        return;
+      }
       if(!termsUseCheckbox.checked){
         alert("필수 약관에 동의하십시오.")
         return;
